generated/PanicoParser.cpp

// Generated from Panico.g4 by ANTLR 4.13.2


#include "PanicoListener.h"
#include "PanicoVisitor.h"

#include "PanicoParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PanicoParserStaticData final {
  PanicoParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PanicoParserStaticData(const PanicoParserStaticData&) = delete;
  PanicoParserStaticData(PanicoParserStaticData&&) = delete;
  PanicoParserStaticData& operator=(const PanicoParserStaticData&) = delete;
  PanicoParserStaticData& operator=(PanicoParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag panicoParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PanicoParserStaticData> panicoParserStaticData = nullptr;

void panicoParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (panicoParserStaticData != nullptr) {
    return;
  }
#else
  assert(panicoParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PanicoParserStaticData>(
    std::vector<std::string>{
      "programa", "vars", "decl_var", "tipo", "funcs", "params", "cuerpo", 
      "estatuto", "asigna", "expresion", "exp", "termino", "factor", "cte", 
      "condicion", "ciclo", "llamada", "imprime", "impr"
    },
    std::vector<std::string>{
      "", "'programa'", "'inicio'", "'fin'", "'vars'", "'int'", "'float'", 
      "'print'", "'while'", "'void'", "'if'", "'else'", "';'", "','", "':'", 
      "'{'", "'}'", "'('", "')'", "'='", "'>'", "'<'", "'!='", "'=='", "'+'", 
      "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "PROGRAMA", "INICIO", "FIN", "VARS", "INT", "FLOAT", "PRINT", 
      "WHILE", "VOID", "IF", "ELSE", "PUNTOYCOMA", "COMA", "DOSPUNTOS", 
      "LLAVEIZQ", "LLAVEDER", "PARENIZQ", "PARENDER", "IGUAL", "MAYORQUE", 
      "MENORQUE", "DIFERENTE", "IGUALIGUAL", "MAS", "MENOS", "MULT", "DIV", 
      "ID", "CTE_ENT", "CTE_FLOT", "LETRERO_VALOR", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  panicoParserStaticData = std::move(staticData);
}

}

PanicoParser::PanicoParser(TokenStream *input) : PanicoParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PanicoParser::PanicoParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PanicoParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *panicoParserStaticData->atn, panicoParserStaticData->decisionToDFA, panicoParserStaticData->sharedContextCache, options);
}

PanicoParser::~PanicoParser() {
  delete _interpreter;
}

const atn::ATN& PanicoParser::getATN() const {
  return *panicoParserStaticData->atn;
}

std::string PanicoParser::getGrammarFileName() const {
  return "Panico.g4";
}

const std::vector<std::string>& PanicoParser::getRuleNames() const {
  return panicoParserStaticData->ruleNames;
}

const dfa::Vocabulary& PanicoParser::getVocabulary() const {
  return panicoParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PanicoParser::getSerializedATN() const {
  return panicoParserStaticData->serializedATN;
}


//----------------- ProgramaContext ------------------------------------------------------------------

PanicoParser::ProgramaContext::ProgramaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PanicoParser::ProgramaContext::PROGRAMA() {
  return getToken(PanicoParser::PROGRAMA, 0);
}

tree::TerminalNode* PanicoParser::ProgramaContext::ID() {
  return getToken(PanicoParser::ID, 0);
}

tree::TerminalNode* PanicoParser::ProgramaContext::PUNTOYCOMA() {
  return getToken(PanicoParser::PUNTOYCOMA, 0);
}

tree::TerminalNode* PanicoParser::ProgramaContext::INICIO() {
  return getToken(PanicoParser::INICIO, 0);
}

tree::TerminalNode* PanicoParser::ProgramaContext::LLAVEIZQ() {
  return getToken(PanicoParser::LLAVEIZQ, 0);
}

PanicoParser::CuerpoContext* PanicoParser::ProgramaContext::cuerpo() {
  return getRuleContext<PanicoParser::CuerpoContext>(0);
}

tree::TerminalNode* PanicoParser::ProgramaContext::LLAVEDER() {
  return getToken(PanicoParser::LLAVEDER, 0);
}

tree::TerminalNode* PanicoParser::ProgramaContext::FIN() {
  return getToken(PanicoParser::FIN, 0);
}

PanicoParser::VarsContext* PanicoParser::ProgramaContext::vars() {
  return getRuleContext<PanicoParser::VarsContext>(0);
}

std::vector<PanicoParser::FuncsContext *> PanicoParser::ProgramaContext::funcs() {
  return getRuleContexts<PanicoParser::FuncsContext>();
}

PanicoParser::FuncsContext* PanicoParser::ProgramaContext::funcs(size_t i) {
  return getRuleContext<PanicoParser::FuncsContext>(i);
}


size_t PanicoParser::ProgramaContext::getRuleIndex() const {
  return PanicoParser::RulePrograma;
}

void PanicoParser::ProgramaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrograma(this);
}

void PanicoParser::ProgramaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrograma(this);
}


std::any PanicoParser::ProgramaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitPrograma(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::ProgramaContext* PanicoParser::programa() {
  ProgramaContext *_localctx = _tracker.createInstance<ProgramaContext>(_ctx, getState());
  enterRule(_localctx, 0, PanicoParser::RulePrograma);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(PanicoParser::PROGRAMA);
    setState(39);
    match(PanicoParser::ID);
    setState(40);
    match(PanicoParser::PUNTOYCOMA);
    setState(42);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PanicoParser::VARS) {
      setState(41);
      vars();
    }
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PanicoParser::VOID) {
      setState(44);
      funcs();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(PanicoParser::INICIO);
    setState(51);
    match(PanicoParser::LLAVEIZQ);
    setState(52);
    cuerpo();
    setState(53);
    match(PanicoParser::LLAVEDER);
    setState(54);
    match(PanicoParser::FIN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarsContext ------------------------------------------------------------------

PanicoParser::VarsContext::VarsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PanicoParser::VarsContext::VARS() {
  return getToken(PanicoParser::VARS, 0);
}

tree::TerminalNode* PanicoParser::VarsContext::LLAVEIZQ() {
  return getToken(PanicoParser::LLAVEIZQ, 0);
}

tree::TerminalNode* PanicoParser::VarsContext::LLAVEDER() {
  return getToken(PanicoParser::LLAVEDER, 0);
}

std::vector<PanicoParser::Decl_varContext *> PanicoParser::VarsContext::decl_var() {
  return getRuleContexts<PanicoParser::Decl_varContext>();
}

PanicoParser::Decl_varContext* PanicoParser::VarsContext::decl_var(size_t i) {
  return getRuleContext<PanicoParser::Decl_varContext>(i);
}


size_t PanicoParser::VarsContext::getRuleIndex() const {
  return PanicoParser::RuleVars;
}

void PanicoParser::VarsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVars(this);
}

void PanicoParser::VarsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVars(this);
}


std::any PanicoParser::VarsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitVars(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::VarsContext* PanicoParser::vars() {
  VarsContext *_localctx = _tracker.createInstance<VarsContext>(_ctx, getState());
  enterRule(_localctx, 2, PanicoParser::RuleVars);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(PanicoParser::VARS);
    setState(57);
    match(PanicoParser::LLAVEIZQ);
    setState(59); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(58);
      decl_var();
      setState(61); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == PanicoParser::ID);
    setState(63);
    match(PanicoParser::LLAVEDER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Decl_varContext ------------------------------------------------------------------

PanicoParser::Decl_varContext::Decl_varContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> PanicoParser::Decl_varContext::ID() {
  return getTokens(PanicoParser::ID);
}

tree::TerminalNode* PanicoParser::Decl_varContext::ID(size_t i) {
  return getToken(PanicoParser::ID, i);
}

tree::TerminalNode* PanicoParser::Decl_varContext::DOSPUNTOS() {
  return getToken(PanicoParser::DOSPUNTOS, 0);
}

PanicoParser::TipoContext* PanicoParser::Decl_varContext::tipo() {
  return getRuleContext<PanicoParser::TipoContext>(0);
}

tree::TerminalNode* PanicoParser::Decl_varContext::PUNTOYCOMA() {
  return getToken(PanicoParser::PUNTOYCOMA, 0);
}

std::vector<tree::TerminalNode *> PanicoParser::Decl_varContext::COMA() {
  return getTokens(PanicoParser::COMA);
}

tree::TerminalNode* PanicoParser::Decl_varContext::COMA(size_t i) {
  return getToken(PanicoParser::COMA, i);
}


size_t PanicoParser::Decl_varContext::getRuleIndex() const {
  return PanicoParser::RuleDecl_var;
}

void PanicoParser::Decl_varContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl_var(this);
}

void PanicoParser::Decl_varContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl_var(this);
}


std::any PanicoParser::Decl_varContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitDecl_var(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::Decl_varContext* PanicoParser::decl_var() {
  Decl_varContext *_localctx = _tracker.createInstance<Decl_varContext>(_ctx, getState());
  enterRule(_localctx, 4, PanicoParser::RuleDecl_var);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(PanicoParser::ID);
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PanicoParser::COMA) {
      setState(66);
      match(PanicoParser::COMA);
      setState(67);
      match(PanicoParser::ID);
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(73);
    match(PanicoParser::DOSPUNTOS);
    setState(74);
    tipo();
    setState(75);
    match(PanicoParser::PUNTOYCOMA);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TipoContext ------------------------------------------------------------------

PanicoParser::TipoContext::TipoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PanicoParser::TipoContext::INT() {
  return getToken(PanicoParser::INT, 0);
}

tree::TerminalNode* PanicoParser::TipoContext::FLOAT() {
  return getToken(PanicoParser::FLOAT, 0);
}


size_t PanicoParser::TipoContext::getRuleIndex() const {
  return PanicoParser::RuleTipo;
}

void PanicoParser::TipoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTipo(this);
}

void PanicoParser::TipoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTipo(this);
}


std::any PanicoParser::TipoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitTipo(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::TipoContext* PanicoParser::tipo() {
  TipoContext *_localctx = _tracker.createInstance<TipoContext>(_ctx, getState());
  enterRule(_localctx, 6, PanicoParser::RuleTipo);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    _la = _input->LA(1);
    if (!(_la == PanicoParser::INT

    || _la == PanicoParser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncsContext ------------------------------------------------------------------

PanicoParser::FuncsContext::FuncsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PanicoParser::FuncsContext::VOID() {
  return getToken(PanicoParser::VOID, 0);
}

tree::TerminalNode* PanicoParser::FuncsContext::ID() {
  return getToken(PanicoParser::ID, 0);
}

tree::TerminalNode* PanicoParser::FuncsContext::PARENIZQ() {
  return getToken(PanicoParser::PARENIZQ, 0);
}

tree::TerminalNode* PanicoParser::FuncsContext::PARENDER() {
  return getToken(PanicoParser::PARENDER, 0);
}

tree::TerminalNode* PanicoParser::FuncsContext::LLAVEIZQ() {
  return getToken(PanicoParser::LLAVEIZQ, 0);
}

PanicoParser::CuerpoContext* PanicoParser::FuncsContext::cuerpo() {
  return getRuleContext<PanicoParser::CuerpoContext>(0);
}

tree::TerminalNode* PanicoParser::FuncsContext::LLAVEDER() {
  return getToken(PanicoParser::LLAVEDER, 0);
}

tree::TerminalNode* PanicoParser::FuncsContext::PUNTOYCOMA() {
  return getToken(PanicoParser::PUNTOYCOMA, 0);
}

PanicoParser::ParamsContext* PanicoParser::FuncsContext::params() {
  return getRuleContext<PanicoParser::ParamsContext>(0);
}

PanicoParser::VarsContext* PanicoParser::FuncsContext::vars() {
  return getRuleContext<PanicoParser::VarsContext>(0);
}


size_t PanicoParser::FuncsContext::getRuleIndex() const {
  return PanicoParser::RuleFuncs;
}

void PanicoParser::FuncsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncs(this);
}

void PanicoParser::FuncsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncs(this);
}


std::any PanicoParser::FuncsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitFuncs(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::FuncsContext* PanicoParser::funcs() {
  FuncsContext *_localctx = _tracker.createInstance<FuncsContext>(_ctx, getState());
  enterRule(_localctx, 8, PanicoParser::RuleFuncs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(PanicoParser::VOID);
    setState(80);
    match(PanicoParser::ID);
    setState(81);
    match(PanicoParser::PARENIZQ);
    setState(83);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PanicoParser::ID) {
      setState(82);
      params();
    }
    setState(85);
    match(PanicoParser::PARENDER);
    setState(86);
    match(PanicoParser::LLAVEIZQ);
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PanicoParser::VARS) {
      setState(87);
      vars();
    }
    setState(90);
    cuerpo();
    setState(91);
    match(PanicoParser::LLAVEDER);
    setState(92);
    match(PanicoParser::PUNTOYCOMA);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamsContext ------------------------------------------------------------------

PanicoParser::ParamsContext::ParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> PanicoParser::ParamsContext::ID() {
  return getTokens(PanicoParser::ID);
}

tree::TerminalNode* PanicoParser::ParamsContext::ID(size_t i) {
  return getToken(PanicoParser::ID, i);
}

std::vector<tree::TerminalNode *> PanicoParser::ParamsContext::DOSPUNTOS() {
  return getTokens(PanicoParser::DOSPUNTOS);
}

tree::TerminalNode* PanicoParser::ParamsContext::DOSPUNTOS(size_t i) {
  return getToken(PanicoParser::DOSPUNTOS, i);
}

std::vector<PanicoParser::TipoContext *> PanicoParser::ParamsContext::tipo() {
  return getRuleContexts<PanicoParser::TipoContext>();
}

PanicoParser::TipoContext* PanicoParser::ParamsContext::tipo(size_t i) {
  return getRuleContext<PanicoParser::TipoContext>(i);
}

std::vector<tree::TerminalNode *> PanicoParser::ParamsContext::COMA() {
  return getTokens(PanicoParser::COMA);
}

tree::TerminalNode* PanicoParser::ParamsContext::COMA(size_t i) {
  return getToken(PanicoParser::COMA, i);
}


size_t PanicoParser::ParamsContext::getRuleIndex() const {
  return PanicoParser::RuleParams;
}

void PanicoParser::ParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParams(this);
}

void PanicoParser::ParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParams(this);
}


std::any PanicoParser::ParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitParams(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::ParamsContext* PanicoParser::params() {
  ParamsContext *_localctx = _tracker.createInstance<ParamsContext>(_ctx, getState());
  enterRule(_localctx, 10, PanicoParser::RuleParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(PanicoParser::ID);
    setState(95);
    match(PanicoParser::DOSPUNTOS);
    setState(96);
    tipo();
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PanicoParser::COMA) {
      setState(97);
      match(PanicoParser::COMA);
      setState(98);
      match(PanicoParser::ID);
      setState(99);
      match(PanicoParser::DOSPUNTOS);
      setState(100);
      tipo();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CuerpoContext ------------------------------------------------------------------

PanicoParser::CuerpoContext::CuerpoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PanicoParser::EstatutoContext *> PanicoParser::CuerpoContext::estatuto() {
  return getRuleContexts<PanicoParser::EstatutoContext>();
}

PanicoParser::EstatutoContext* PanicoParser::CuerpoContext::estatuto(size_t i) {
  return getRuleContext<PanicoParser::EstatutoContext>(i);
}


size_t PanicoParser::CuerpoContext::getRuleIndex() const {
  return PanicoParser::RuleCuerpo;
}

void PanicoParser::CuerpoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCuerpo(this);
}

void PanicoParser::CuerpoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCuerpo(this);
}


std::any PanicoParser::CuerpoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitCuerpo(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::CuerpoContext* PanicoParser::cuerpo() {
  CuerpoContext *_localctx = _tracker.createInstance<CuerpoContext>(_ctx, getState());
  enterRule(_localctx, 12, PanicoParser::RuleCuerpo);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 268436864) != 0)) {
      setState(106);
      estatuto();
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EstatutoContext ------------------------------------------------------------------

PanicoParser::EstatutoContext::EstatutoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PanicoParser::AsignaContext* PanicoParser::EstatutoContext::asigna() {
  return getRuleContext<PanicoParser::AsignaContext>(0);
}

PanicoParser::CondicionContext* PanicoParser::EstatutoContext::condicion() {
  return getRuleContext<PanicoParser::CondicionContext>(0);
}

PanicoParser::CicloContext* PanicoParser::EstatutoContext::ciclo() {
  return getRuleContext<PanicoParser::CicloContext>(0);
}

PanicoParser::LlamadaContext* PanicoParser::EstatutoContext::llamada() {
  return getRuleContext<PanicoParser::LlamadaContext>(0);
}

PanicoParser::ImprimeContext* PanicoParser::EstatutoContext::imprime() {
  return getRuleContext<PanicoParser::ImprimeContext>(0);
}


size_t PanicoParser::EstatutoContext::getRuleIndex() const {
  return PanicoParser::RuleEstatuto;
}

void PanicoParser::EstatutoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEstatuto(this);
}

void PanicoParser::EstatutoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEstatuto(this);
}


std::any PanicoParser::EstatutoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitEstatuto(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::EstatutoContext* PanicoParser::estatuto() {
  EstatutoContext *_localctx = _tracker.createInstance<EstatutoContext>(_ctx, getState());
  enterRule(_localctx, 14, PanicoParser::RuleEstatuto);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      asigna();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(113);
      condicion();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(114);
      ciclo();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(115);
      llamada();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(116);
      imprime();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AsignaContext ------------------------------------------------------------------

PanicoParser::AsignaContext::AsignaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PanicoParser::AsignaContext::ID() {
  return getToken(PanicoParser::ID, 0);
}

tree::TerminalNode* PanicoParser::AsignaContext::IGUAL() {
  return getToken(PanicoParser::IGUAL, 0);
}

PanicoParser::ExpresionContext* PanicoParser::AsignaContext::expresion() {
  return getRuleContext<PanicoParser::ExpresionContext>(0);
}

tree::TerminalNode* PanicoParser::AsignaContext::PUNTOYCOMA() {
  return getToken(PanicoParser::PUNTOYCOMA, 0);
}


size_t PanicoParser::AsignaContext::getRuleIndex() const {
  return PanicoParser::RuleAsigna;
}

void PanicoParser::AsignaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAsigna(this);
}

void PanicoParser::AsignaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PanicoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAsigna(this);
}


std::any PanicoParser::AsignaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PanicoVisitor*>(visitor))
    return parserVisitor->visitAsigna(this);
  else
    return visitor->visitChildren(this);
}

PanicoParser::AsignaContext* PanicoParser::asigna() {
  AsignaContext *_localctx = _tracker.createInstance<AsignaContext>(_ctx, getState());
  enterRule(_localctx, 16, PanicoParser::RuleAsigna);
